issue-851 Re-adding flex-auto to prevent tab link overflow

--- a/app/styles/submodule/utilities/_flex.scss
+++ b/app/styles/submodule/utilities/_flex.scss
@@ -64,3 +64,8 @@
 
 .flex-grow { flex-grow: 1; }
 .flex-shrink-none { flex-shrink: 0; }
+.flex-auto {
+    flex: 1 1 auto;
+    min-width: 0;
+    min-height: 0;
+}
